  * NEW FEATURE: Turn backlight on/off by STAR button in MOTOROLA build
  * NEW FEATURE: Automatic light control in MOTOROLA version
  * BUGFIX: Sending messages was not possible after renaming a contact
  * BUGFIX: Time bug (hopefully) fixed
  * BUGFIX: 125.1 exception was shown after each file transfer.
  * BUGFIX: "Deadlock" when renaming or adding contacts
  * BUGFIX: Red LED was blinking forever in RIM build
  * BUGFIX: Sound system crashed on some phones when two messages came together
  * ContactList title is now different depending on the length of the word "list"
  * Options subpages now have a back button so you can go back without saving
  * There now is a message informing you if the file transfer was ok
  * In the file transfer ok window you can see the speed of the file transfer
  * Progressbar for file transfer is now drawn more precise
  * You can see size and cost of file transfer before sending
  * New option: Auto connect on startup
  * New option for MOTOROLA: Light timeout and manual light control
  * A message how to disable keylock is shown on splash screen if trying it the wrong way
  * Name of recipient is shown on top of message edit field
  * On the ChatHistory screen you can now see how many chats are open and in which one you are
  * Contact names are now also updated on server list if renamed in Jimm
  * Added new option "Color scheme"
  * Added "Shadow connection" hack for Nokia 6230 users
  * Contact list sorts without case sensitivity now
  * Target modules and free heap memory are displayed on about screen.
  * Password is saved in UTF-8 format now
  * Jimm supporst minimizing in supporting platforms (e.g. SE K700i)
  * New images that are smaller and should work on Nokia 6230i
  * Added Ukrainian translation
  * Added Polish translation
  
________________________________________________________________________________
VERSION 0.4.0

  * NEW FEATURE: Now Jimm is able to send out status messages
  